Fix table styles in dark mode (#1124)

--- a/web/src/layout/detail/repositories/Summary.module.css
+++ b/web/src/layout/detail/repositories/Summary.module.css
@@ -2,6 +2,11 @@
   font-size: 0.9rem;
 }
 
+.table > :not(caption) > * > * {
+  background-color: transparent;
+  color: inherit;
+}
+
 .table th {
   color: var(--color-font);
   background-color: var(--bg-color);
